Fix cropping of background image.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,7 @@
 body {
   background-image: url("img/bg.png");
   background-repeat: repeat-y;
+  background-position: center center;
 }
 
 ul {
